fix for incorrect scrollbars

--- a/dashboard-ui/src/components/dashboard/dashboard.css
+++ b/dashboard-ui/src/components/dashboard/dashboard.css
@@ -50,7 +50,7 @@
 }
 
 .dashboardPanelBody {
-    overflow: scroll;
+    overflow: auto;
     height: 100%;
     width: 100%;
     padding: 30px;
